--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme">
 
 
-    <activity
+        <activity
             android:name=".views.activities.IntroActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
@@ -90,10 +90,10 @@
         </provider> <!-- TODO: Habilitar para produccion -->
         <meta-data
             android:name="firebase_performance_collection_enabled"
-            android:value="false" /> <!-- TODO: Habilitar para produccion -->
+            android:value="true" /> <!-- TODO: Habilitar para produccion -->
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
-            android:value="false" />
+            android:value="true" />
     </application>
 
 </manifest>
