--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ android {
             }
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
