--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core:1.3.0'
+    implementation 'com.google.android.play:core:1.8.0'
     implementation 'androidx.fragment:fragment:1.2.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     //Viewmodel Extension
