--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "cl.figonzal.lastquakechile"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 22  //ultima version 20
-        versionName "1.4.0"
+        versionCode 23  //ultima version 20
+        versionName "1.5.0-alpha"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -61,24 +61,22 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core:1.3.0'
-    implementation 'com.google.android.play:core:1.8.0'
+    implementation 'com.google.android.play:core:1.8.0' //API opiniones
     implementation 'androidx.fragment:fragment:1.2.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    //Viewmodel Extension
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
-
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"   //Viewmodel
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"    //LiveData
+    implementation "androidx.lifecycle:lifecycle-runtime:2.2.0" //Lifecycle
+
     implementation 'androidx.preference:preference:1.1.1' //Preferencias de usuario
 
-    //Material design
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.2.1' //Material Design
 
-    //Volley para HTTP
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.1.1' //Volley para HTTP
 
-    //Paleta para mostrar toolbar transparente
-    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.palette:palette:1.0.0' //Paleta para mostrar toolbar transparente
 
     //Glide para imagenes (Soporte con ANDROIDX)
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -92,8 +90,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-ads:19.3.0'
     implementation 'com.google.firebase:firebase-perf:19.0.8'
 
-    //Googleplay
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0' //Google Maps
+
+    implementation 'com.jakewharton.timber:timber:4.7.1' //Timber logs
 
     //junit
     testImplementation 'junit:junit:4.12'
