--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".ApplicationController"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_chile"
         android:label="@string/app_name"
@@ -52,7 +53,7 @@
                 android:value=".views.activities.MainActivity" />
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".views.activities.SettingsActivity"
             android:parentActivityName=".views.activities.MainActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
@@ -90,10 +91,10 @@
         </provider> <!-- TODO: Habilitar para produccion -->
         <meta-data
             android:name="firebase_performance_collection_enabled"
-            android:value="true" /> <!-- TODO: Habilitar para produccion -->
+            android:value="false" /> <!-- TODO: Habilitar para produccion -->
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
-            android:value="true" />
+            android:value="false" />
     </application>
 
 </manifest>
