--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,8 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1' //Timber logs
 
+    implementation 'com.google.code.gson:gson:2.8.6' //GSON
+
     //junit
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
