--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "cl.figonzal.lastquakechile"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 23  //ultima version 20
-        versionName "1.5.0-beta"
+        versionCode 24  //ultima version 24
+        versionName "1.5.0-beta-1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -91,6 +91,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf:19.0.8'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0' //Google Maps
+    implementation 'com.google.android.play:core:1.8.2'
 
     implementation 'com.jakewharton.timber:timber:4.7.1' //Timber logs
 
