--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "cl.figonzal.lastquakechile"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 26  //realease en 26
-        versionName "1.5.0"
+        versionCode 27  //realease en 27
+        versionName "1.5.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -61,7 +61,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core:1.3.0'
-    implementation 'com.google.android.play:core:1.8.0' //API opiniones
+    //implementation 'com.google.android.play:core:1.8.0' //API opiniones
     implementation 'androidx.fragment:fragment:1.2.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
