--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,12 +63,14 @@ dependencies {
     implementation 'androidx.core:core:1.3.2'
     //implementation 'com.google.android.play:core:1.8.0' //API opiniones
     implementation 'androidx.fragment:fragment:1.2.5'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    //Constraint layout
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    //Life cycle components
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"   //Viewmodel
     implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"    //LiveData
-    implementation "androidx.lifecycle:lifecycle-runtime:2.2.0" //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime:2.2.0" //LifecycleEvents
 
     implementation 'androidx.preference:preference:1.1.1' //Preferencias de usuario
 
