--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,13 +92,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    //Firebase
-    implementation 'com.google.firebase:firebase-messaging:21.0.1'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
-    implementation 'com.google.firebase:firebase-dynamic-links:19.1.1'
-    implementation 'com.google.firebase:firebase-ads:19.6.0'
-    implementation 'com.google.firebase:firebase-perf:19.0.11'
+    //Firebase BOM
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    //Firebase Dependency
+    implementation 'com.google.firebase:firebase-ads'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-dynamic-links'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-perf'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0' //Google Maps
     implementation 'com.google.android.play:core:1.9.0'
