--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,10 @@ jobs:
       script: "./gradlew assembleRelease"
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_cdc0677920ab_key -iv $encrypted_cdc0677920ab_iv -in secrets.tar.gz.enc -out secrets.tar.gz -d
+  - openssl aes-256-cbc -K $encrypted_c9436dc7b87c_key -iv $encrypted_c9436dc7b87c_iv -in secrets.tar.gz.enc -out secrets.tar.gz -d
   - tar xzvf secrets.tar.gz
+  - mv key.jks app/
+  - mv google-services.json app/
   - chmod +x gradlew
   - export TZ=America/Santiago
 
