--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,13 @@ android {
         }
     }
 
-    compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "cl.figonzal.lastquakechile"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 30  //realease en 29
         versionName "1.5.3-beta"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -68,33 +68,30 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    //TODO: BUG RESUELTO CON FASE BETA
-    //https://stackoverflow.com/questions/52537638/how-to-resolve-noclassdeffounderror-failed-resolution-of-landroid-view-viewon
-    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
 
-    implementation 'androidx.core:core:1.3.2'
+    implementation 'androidx.core:core:1.7.0'
     //implementation 'com.google.android.play:core:1.8.0' //API opiniones
-    implementation 'androidx.fragment:fragment:1.3.2'
+    implementation 'androidx.fragment:fragment:1.4.0'
 
     //Constraint layout
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     //Life cycle components
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.1"   //Viewmodel
-    implementation "androidx.lifecycle:lifecycle-livedata:2.3.1"    //LiveData
-    implementation "androidx.lifecycle:lifecycle-runtime:2.3.1" //LifecycleEvents
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.0"   //Viewmodel
+    implementation "androidx.lifecycle:lifecycle-livedata:2.4.0"    //LiveData
+    implementation "androidx.lifecycle:lifecycle-runtime:2.4.0" //LifecycleEvents
 
     implementation 'androidx.preference:preference:1.1.1' //Preferencias de usuario
 
-    implementation 'com.google.android.material:material:1.3.0' //Material Design
+    implementation 'com.google.android.material:material:1.4.0' //Material Design
 
-    implementation 'com.android.volley:volley:1.2.0' //Volley para HTTP
+    implementation 'com.android.volley:volley:1.2.1' //Volley para HTTP
 
     implementation 'androidx.palette:palette:1.0.0' //Paleta para mostrar toolbar transparente
 
     //Glide para imagenes (Soporte con ANDROIDX)
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     //Firebase BOM
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
@@ -106,24 +103,24 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-perf'
 
-    implementation 'com.google.android.gms:play-services-maps:17.0.0' //Google Maps
-    implementation 'com.google.android.play:core:1.10.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2' //Google Maps
+    implementation 'com.google.android.play:core:1.10.3'
 
     implementation 'com.jakewharton.timber:timber:4.7.1' //Timber logs
 
-    implementation 'com.google.code.gson:gson:2.8.6' //GSON
+    implementation 'com.google.code.gson:gson:2.8.9' //GSON
 
     //junit
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
     //UI AUTOMATOR
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     //Espreso
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
 }
