--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.firebase.firebase-perf'
@@ -63,32 +64,39 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+    
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
-
-    implementation 'androidx.core:core:1.7.0'
-    //implementation 'com.google.android.play:core:1.8.0' //API opiniones
-    implementation 'androidx.fragment:fragment:1.4.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    implementation 'androidx.fragment:fragment-ktx:1.4.0'
 
     //Constraint layout
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     //Life cycle components
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.4.0"   //Viewmodel
-    implementation "androidx.lifecycle:lifecycle-livedata:2.4.0"    //LiveData
-    implementation "androidx.lifecycle:lifecycle-runtime:2.4.0" //LifecycleEvents
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"   //Viewmodel
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"    //LiveData
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0" //LifecycleEvents
 
-    implementation 'androidx.preference:preference:1.1.1' //Preferencias de usuario
+    implementation 'androidx.preference:preference-ktx:1.1.1' //Preferencias de usuario
 
     implementation 'com.google.android.material:material:1.4.0' //Material Design
 
     implementation 'com.android.volley:volley:1.2.1' //Volley para HTTP
 
-    implementation 'androidx.palette:palette:1.0.0' //Paleta para mostrar toolbar transparente
+    implementation 'androidx.palette:palette-ktx:1.0.0' //Paleta para mostrar toolbar transparente
 
     //Glide para imagenes (Soporte con ANDROIDX)
     implementation 'com.github.bumptech.glide:glide:4.12.0'
