--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
         }
 
         // Inject the Maps API key into the manifest
-        manifestPlaceholders = [ mapsApiKey : properties.getProperty("MAPS_API_KEY", "") ]
+        manifestPlaceholders = [mapsApiKey: properties.getProperty("MAPS_API_KEY", "")]
     }
     buildTypes {
         release {
@@ -70,7 +70,7 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    
+
     buildFeatures {
         viewBinding true
     }
@@ -88,16 +88,16 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0' //Corrutinas
+    implementation 'androidx.preference:preference-ktx:1.2.0' //preference
+    implementation 'com.google.android.material:material:1.5.0' //materia design
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01' //splash screen
+
+    implementation 'com.jakewharton.timber:timber:5.0.1' //Timber logs
+    implementation 'com.google.code.gson:gson:2.8.9' //GSON
 
     //Life cycle components
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"   //Viewmodel
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"    //LiveData
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0" //LifecycleEvents
-
-    implementation 'androidx.preference:preference-ktx:1.1.1'
-
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.palette:palette-ktx:1.0.0' //Paleta para mostrar toolbar transparente
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
     //ROOM
     // Room components
@@ -105,7 +105,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.0"
     androidTestImplementation "androidx.room:room-testing:2.4.0"
 
-    implementation 'com.android.volley:volley:1.2.1' //Volley para HTTP
+    //Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -124,10 +124,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:18.0.2' //Google Maps
     implementation 'com.google.android.play:core:1.10.3'
-
-    implementation 'com.jakewharton.timber:timber:4.7.1' //Timber logs
-
-    implementation 'com.google.code.gson:gson:2.8.9' //GSON
 
     //junit
     testImplementation 'junit:junit:4.13.2'
