--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.firebase.firebase-perf'
+apply plugin: 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 
 android {
     def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -99,6 +100,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
+    //Google Play Core
+    implementation 'com.google.android.play:core-ktx:1.8.1'
+
+    //Google Maps
+    // KTX for the Maps SDK for Android
+    implementation 'com.google.maps.android:maps-ktx:3.2.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.3'
+
     //ROOM
     // Room components
     implementation "androidx.room:room-ktx:2.4.0"
@@ -121,9 +131,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-dynamic-links'
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-perf'
-
-    implementation 'com.google.android.gms:play-services-maps:18.0.2' //Google Maps
-    implementation 'com.google.android.play:core:1.10.3'
 
     //junit
     testImplementation 'junit:junit:4.13.2'
