--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
 
         // Add the dependency for the Performance Monitoring plugin
-        classpath 'com.google.firebase:perf-plugin:1.4.0'  // Performance Monitoring plugin
+        classpath 'com.google.firebase:perf-plugin:1.4.0'
+        classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0'
+// Performance Monitoring plugin
     }
 }
 
