--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ buildscript {
 
         // Add the dependency for the Performance Monitoring plugin
         classpath 'com.google.firebase:perf-plugin:1.4.0'
+
+        //Google maps secrets
         classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0'
 // Performance Monitoring plugin
     }
