--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_chile_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Starting">
+        android:theme="@style/AppTheme">
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -34,9 +34,7 @@
 
         <activity
             android:name=".core.ui.MainActivity"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:theme="@style/AppTheme.Starting">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,7 +54,6 @@
             android:name=".core.ui.SettingsActivity"
             android:parentActivityName=".core.ui.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
             tools:ignore="LockedOrientationActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
