--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:value="${MAPS_API_KEY}" />
 
         <activity
+            android:name=".views.activities.MapsActivityDelete"
+            android:exported="false"
+            android:label="@string/title_activity_maps_delete" />
+        <activity
             android:name=".core.ui.MainActivity"
             android:exported="true">
             <intent-filter>
