--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713" />
+            android:value="@string/ADMOB_MASTER_KEY" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -46,7 +46,6 @@
         <activity
             android:name=".quake_feature.ui.QuakeDetailsActivity"
             android:parentActivityName=".core.ui.MainActivity"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
