Se agrega limite a consulta de API
Signed-off-by: Felipe Gonzalez Alarcon <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 19 minutes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,7 @@
 
         <activity
             android:name=".core.ui.MainActivity"
-            android:exported="true"
-            android:theme="@style/AppTheme.Starting">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
