--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
     testImplementation 'org.mockito:mockito-inline:4.3.1'
+    testImplementation 'androidx.test:core-ktx:1.4.0'
 
     //For runBlockingTest, CoroutineDispatcher etc.
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
