--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,84 +77,75 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.6.21")
+    implementation("androidx.core:core-ktx:1.8.0")
+    implementation("androidx.appcompat:appcompat:1.4.2")
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.21"
-    implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation "androidx.activity:activity-ktx:1.4.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation("androidx.recyclerview:recyclerview:1.2.1")
+    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0' //Corrutinas
-    implementation 'androidx.preference:preference-ktx:1.2.0' //preference
-    implementation 'com.google.android.material:material:1.6.0' //materia design
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta02' //splash screen
+    implementation("androidx.fragment:fragment-ktx:1.4.1")
+    implementation("androidx.activity:activity-ktx:1.4.0")
 
-    implementation 'com.jakewharton.timber:timber:5.0.1' //Timber logs
-    implementation 'com.google.code.gson:gson:2.8.9' //GSON
+    implementation("com.google.android.material:material:1.6.1")//Material design
+    implementation("androidx.core:core-splashscreen:1.0.0-rc01") //splash screen
 
-    //Dependency injection KOIN
-    implementation "io.insert-koin:koin-core:3.1.5"
-    implementation "io.insert-koin:koin-android:3.1.5"
+    //GLIDE
+    implementation("com.github.bumptech.glide:glide:4.13.2")
 
     //Life cycle components
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.1")
+    implementation("androidx.lifecycle:lifecycle-extensions:2.2.0")
+
+    // Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
+
+    //Dependency injection KOIN
+    implementation("io.insert-koin:koin-core:3.1.5")
+    implementation("io.insert-koin:koin-android:3.1.5")
 
     //Google Play
-    implementation 'com.google.android.play:core-ktx:1.8.1'
-    implementation 'com.google.android.gms:play-services-ads:20.6.0'
+    implementation("com.google.android.play:core-ktx:1.8.1")
+    implementation("com.google.android.gms:play-services-ads:21.0.0")
 
     //Google Maps
     // KTX for the Maps SDK for Android
-    implementation 'com.google.maps.android:maps-ktx:3.2.1'
-    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation("com.google.maps.android:maps-ktx:3.2.1")
+    implementation("com.google.android.gms:play-services-maps:18.0.2")
 
-    //ROOM
-    // Room components
-    implementation "androidx.room:room-ktx:2.4.2"
-    kapt "androidx.room:room-compiler:2.4.2"
-    androidTestImplementation "androidx.room:room-testing:2.4.2"
+    implementation("androidx.preference:preference-ktx:1.2.0") //preference
+
+    //Room components
+    implementation("androidx.room:room-ktx:2.4.2")
+    kapt("androidx.room:room-compiler:2.4.2")
 
     //Retrofit
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    implementation 'com.github.bumptech.glide:glide:4.13.0' //Carga de imagenes
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
 
     //Firebase BOM
-    implementation platform('com.google.firebase:firebase-bom:29.0.4')
-    //Firebase Dependency
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-dynamic-links'
-    implementation 'com.google.firebase:firebase-messaging-ktx'
-    implementation 'com.google.firebase:firebase-perf-ktx'
+    implementation platform("com.google.firebase:firebase-bom:30.1.0")
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-crashlytics-ktx")
+    implementation("com.google.firebase:firebase-dynamic-links")
+    implementation("com.google.firebase:firebase-messaging-ktx")
+    implementation("com.google.firebase:firebase-perf-ktx")
+
+    //TIMBER
+    implementation("com.jakewharton.timber:timber:5.0.1")
 
     //junit
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
-    testImplementation 'org.mockito:mockito-inline:4.3.1'
-    testImplementation 'androidx.test:core-ktx:1.4.0'
+    testImplementation("junit:junit:4.13.2")
+    testImplementation("androidx.test:core-ktx:1.4.0")
+    testImplementation("io.insert-koin:koin-test:3.1.5")
 
-    //For runBlockingTest, CoroutineDispatcher etc.
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
-    //For InstantTaskExecutorRule
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-
-    //UI AUTOMATOR
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-
-    //Espreso
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    //Koin test
-    testImplementation "io.insert-koin:koin-test:3.1.5"
+    // Instrumented Unit Tests
+    androidTestImplementation("junit:junit:4.13.2")
+    androidTestImplementation("androidx.room:room-testing:2.4.2")
+    androidTestImplementation("com.google.truth:truth:1.0.1")
 
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 }
