--- a/build.gradle
+++ b/build.gradle
@@ -7,27 +7,21 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
-
+        classpath("com.android.tools.build:gradle:7.2.1")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21")
-
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
 
         //FIREBASE CRASH ANALYTICS
         // Check for v3.1.2 or higher
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath("com.google.gms:google-services:4.3.10")
 
-        // Add the Firebase Crashlytics Gradle plugin.
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+        // Add the Crashlytics Gradle plugin
+        classpath("com.google.firebase:firebase-crashlytics-gradle:2.9.0")
 
         // Performance Monitoring plugin
-        // Add the dependency for the Performance Monitoring plugin
         classpath 'com.google.firebase:perf-plugin:1.4.1'
 
         //Google maps secrets
-        classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0'
+        classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1'
     }
 }
 
