--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,6 +144,10 @@ dependencies {
 
     // Instrumented Unit Tests
     androidTestImplementation("junit:junit:4.13.2")
+    androidTestImplementation("androidx.test:runner:1.4.0")
+    androidTestImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0")
+    androidTestImplementation("androidx.arch.core:core-testing:2.1.0")
+    androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
     androidTestImplementation("androidx.room:room-testing:2.4.2")
     androidTestImplementation("com.google.truth:truth:1.0.1")
 
