Espresso test para android instrumentation
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 2 hours 47 minutes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        animationsDisabled = true
+        unitTests.includeAndroidResources true
+    }
 }
 
 ext {
