Problema resuelto al recrear activity en modo noche con koin
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 2 hours 52 minutes

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,19 @@
-#Sun Jan 17 16:20:31 CLST 2021
+#
+#
+# This file is subject to the terms and conditions defined in
+# file 'LICENSE', which is part of this source code package
+#
+# Autor: Felipe González
+# Email: felipe.gonzalezalarcon94@gmail.com
+#
+# Copyright (c) 2022
+#
+# Last modified 25-05-22 23:26
+#
+#Fri Nov 06 19:06:40 CLST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-all.zip
+systemProp.gradle.user.home=GRADLE_USER_HOME
