--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 # Android Gradle Plugin (IMPORTANTE)
-agp = "8.4.0"
+agp = "8.5.1"
 # Kotlin (IMPORTANTE)
-kotlin = "1.9.23"
+kotlin = "2.0.0"
 # Funciones de extension Kotlin para Android
 coreKtx = "1.13.1"
 # Material Design
@@ -16,22 +16,17 @@ moshi = "1.15.1"
 # Base de datos local
 room = "2.6.1"
 # ViewModel para Android
-lifecycleViewmodelKtx = "2.8.2"
+lifecycleViewmodelKtx = "2.8.4"
 # Corrutinas android kotlin
-kotlinxCoroutinesAndroid = "1.8.0"
+kotlinxCoroutinesAndroid = "1.8.1"
 # Android testing
-androidx-test = "1.5.0"
+androidx-test = "1.6.1"
 # Android testing 2
 coreTesting = "2.2.0"
 # Fragment testing
-androidx-fragment = "1.8.0"
-
-
-androidx-test-espresso = "3.5.1"
-com-android-tools-utp = "31.4.0"
-com-github-bumptech-glide = "4.16.0"
-com-google-devtools-ksp = "1.9.23-1.0.19"
-com-google-testing-platform = "0.0.9-alpha02"
+androidx-fragment = "1.8.2"
+# Android espresso
+espresso = "3.6.1"
 koin = "3.5.6"
 
 [libraries]
@@ -45,7 +40,6 @@ androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "
 androidx-appcompat = "androidx.appcompat:appcompat:1.7.0"
 androidx-constraintlayout = "androidx.constraintlayout:constraintlayout:2.1.4"
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
-
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesAndroid" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
@@ -55,63 +49,55 @@ koin-test-junit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 logging-interceptor = "com.squareup.okhttp3:logging-interceptor:4.12.0"
-
 sandwich = { module = "com.github.skydoves:sandwich", version.ref = "sandwich" }
 sandwich-retrofit = { module = "com.github.skydoves:sandwich-retrofit", version.ref = "sandwich" }
-
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
-
 com-google-firebase-firebase-bom = "com.google.firebase:firebase-bom:33.1.2"
 com-google-firebase-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 com-google-firebase-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
 com-google-firebase-firebase-perf-ktx = { module = "com.google.firebase:firebase-perf-ktx" }
 com-google-firebase-firebase-messaging-ktx = { module = "com.google.firebase:firebase-messaging-ktx" }
-
 com-jakewharton-timber = "com.jakewharton.timber:timber:5.0.1"
-
 # Google play
-com-google-android-gms-play-services-ads = "com.google.android.gms:play-services-ads:23.1.0"
+com-google-android-gms-play-services-ads = "com.google.android.gms:play-services-ads:23.2.0"
 com-google-android-play-app-update-ktx = "com.google.android.play:app-update-ktx:2.1.0"
 com-google-android-play-review-ktx = "com.google.android.play:review-ktx:2.0.1"
-com-google-android-ump-user-messaging-platform = "com.google.android.ump:user-messaging-platform:2.2.0"
-com-google-android-gms-play-services-maps = "com.google.android.gms:play-services-maps:18.2.0"
-com-google-maps-android-maps-ktx = "com.google.maps.android:maps-ktx:3.4.0"
-
+com-google-android-ump-user-messaging-platform = "com.google.android.ump:user-messaging-platform:3.0.0"
+com-google-android-gms-play-services-maps = "com.google.android.gms:play-services-maps:19.0.0"
+com-google-maps-android-maps-ktx = "com.google.maps.android:maps-ktx:5.1.1"
 # Testing
 junit = "junit:junit:4.13.2"
 androidx-test-core-ktx = { module = "androidx.test:core-ktx", version.ref = "androidx-test" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
-androidx-test-ext-truth = { module = "androidx.test.ext:truth", version.ref = "androidx-test" }
-app-cash-turbine = "app.cash.turbine:turbine:0.13.0"
-androidx-test-runner = "androidx.test:runner:1.5.2"
+androidx-test-ext-truth = "androidx.test.ext:truth:1.6.0"
+app-cash-turbine = "app.cash.turbine:turbine:1.1.0"
+androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
-androidx-test-ext-junit-ktx = "androidx.test.ext:junit-ktx:1.1.5"
-androidx-test-espresso-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-test-espresso" }
-androidx-test-espresso-espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "androidx-test-espresso" }
+androidx-test-ext-junit-ktx = "androidx.test.ext:junit-ktx:1.2.1"
+androidx-test-espresso-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+androidx-test-espresso-espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "espresso" }
 androidx-test-uiautomator = "androidx.test.uiautomator:uiautomator:2.3.0"
-
 # Debug
 androidx-fragment-fragment-testing-manifest = { module = "androidx.fragment:fragment-testing-manifest", version.ref = "androidx-fragment" }
 androidx-fragment-fragment-testing = { module = "androidx.fragment:fragment-testing", version.ref = "androidx-fragment" }
-com-squareup-leakcanary-leakcanary-android = "com.squareup.leakcanary:leakcanary-android:2.11"
+com-squareup-leakcanary-leakcanary-android = "com.squareup.leakcanary:leakcanary-android:2.14"
 com-android-tools-desugar_jdk_libs = "com.android.tools:desugar_jdk_libs:2.0.4"
-
 
 [bundles]
 google-play = [
-    "com-google-android-play-app-update-ktx",
     "com-google-android-gms-play-services-ads",
+    "com-google-android-gms-play-services-maps",
+    "com-google-android-play-app-update-ktx",
     "com-google-android-play-review-ktx",
     "com-google-android-ump-user-messaging-platform",
-    "com-google-android-gms-play-services-maps",
-    "com-google-maps-android-maps-ktx"
+    "com-google-maps-android-maps-ktx",
 ]
 firebase = [
     "com-google-firebase-firebase-analytics-ktx",
     "com-google-firebase-firebase-crashlytics-ktx",
+    "com-google-firebase-firebase-messaging-ktx",
     "com-google-firebase-firebase-perf-ktx",
-    "com-google-firebase-firebase-messaging-ktx"
 ]
 
 [plugins]
@@ -122,8 +108,8 @@ com-github-ben-manes-versions = "com.github.ben-manes.versions:0.51.0"
 # Plugin para actualizar versiones de dependencias
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.8.4"
 com-google-android-libraries-mapsplatform-secrets-gradle-plugin = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:2.0.1"
-com-google-devtools-ksp = "com.google.devtools.ksp:1.9.23-1.0.19"
-com-google-firebase-crashlytics = "com.google.firebase.crashlytics:3.0.1"
+com-google-devtools-ksp = "com.google.devtools.ksp:2.0.0-1.0.24"
+com-google-firebase-crashlytics = "com.google.firebase.crashlytics:3.0.2"
 com-google-firebase-firebase-perf = "com.google.firebase.firebase-perf:1.4.2"
 com-google-gms-google-services = "com.google.gms.google-services:4.4.2"
-org-sonarqube = "org.sonarqube:4.0.0.2929"
+org-sonarqube = "org.sonarqube:5.1.0.4882"
